2012-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Fix handling of --fomit-frame-pointer for z180, rk and r3ka port.

2012-06-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genAssign): no assignment for ruonly to ruonly
	* src/SDCC.y,
	* src/SDCCerr.c: W_COMP_RANGE, W_EMPTY_SOURCE_FILE & W_CONTROL_FLOW are pedantic
	* src/SDCCast.c (processParms): no cast for signedness only,
	  (resultTypePropagate): propagate for GETHBIT, GETABIT, GETBYTE & GETWORD,
	  (decorateType: BITWISEAND): rearrange first,
	  (decorateType: RETURN): no cast for signedness only,
	  (optimizeGetHbit, optimizeGetAbit): use bitsForType instead of getSize and
	   propagate resultType,
	  (optimizeGetByte, optimizeGetWord): handle offset 0
	* src/SDCClabel.c (deleteIfx),
	* src/SDCCcse.c (ifxOptimize): W_CONTROL_FLOW is pedantic,
	  (algebraicOpts: BITWISEAND, OR): use bitsForType instead of getSize
	* src/SDCCicode.c (geniCodeLogic): W_COMP_RANGE is pedantic,
	  (geniCodeUnary, geniCodeBinary): added param resType,
	  (checkTypes): no cast for signedness only,
	  (ast2iCode): propagate tree->ftype
	* src/SDCCopt.c (optimizeCastCast): use bitsForType instead of getSize
	* src/SDCCsymt.c (comparePtrType): only cast signedness if necessary
	* src/SDCCsymt.h,
	* src/SDCCicode.h: cosmetics

2012-06-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fixed bugs #3531546 and #3531545

2012-06-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix 16-Bit addition for interleaved pairs. Partial fix for bug #3531660.

2012-06-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix POINTER_SET with surviving result partially in hl. Partial fix for bug #3531660.

2012-06-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_autobaud.c: cosmetics
	* device/lib/printfl.c: fixed bug 3513300

2012-06-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
